Fix news page cut off
close #40

--- a/sites/all/themes/cas/sass/_responsive.scss
+++ b/sites/all/themes/cas/sass/_responsive.scss
@@ -910,6 +910,12 @@ screen and (height:768px) and (width:1024px)
     {
         display: none;
     }
+
+    #block-system-main .view-news-and-events .views-row
+    {
+        margin:0;
+        width:auto;
+    }
 }
 
 
